@@ -17,13 +17,13 @@
 
 package org.openqa.selenium.grid.distributor.local;
 
+import static java.util.stream.Collectors.toUnmodifiableSet;
+import static org.openqa.selenium.concurrent.ExecutorServices.shutdownGracefully;
 import static org.openqa.selenium.grid.data.Availability.DOWN;
 import static org.openqa.selenium.grid.data.Availability.DRAINING;
 import static org.openqa.selenium.grid.data.Availability.UP;
 import static org.openqa.selenium.internal.Debug.getDebugLogLevel;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import java.net.URI;
 import java.time.Duration;
 import java.util.ArrayList;
@@ -35,14 +35,18 @@ import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
+import java.util.concurrent.RejectedExecutionException;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReadWriteLock;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
+import org.jspecify.annotations.Nullable;
 import org.openqa.selenium.HealthCheckFailedException;
 import org.openqa.selenium.concurrent.GuardedRunnable;
 import org.openqa.selenium.events.EventBus;
@@ -89,12 +93,11 @@ public class LocalNodeRegistry implements NodeRegistry {
   private final ExecutorService nodeHealthCheckExecutor;
   private final Duration purgeNodesInterval;
   private final ScheduledExecutorService purgeDeadNodesService;
-  private final int newSessionThreadPoolSize;
+  private final AtomicBoolean healthChecksInProgress = new AtomicBoolean(false);
 
   public LocalNodeRegistry(
       Tracer tracer,
       EventBus bus,
-      int newSessionThreadPoolSize,
       HttpClient.Factory clientFactory,
       Secret registrationSecret,
       Duration healthcheckInterval,
@@ -110,7 +113,6 @@ public class LocalNodeRegistry implements NodeRegistry {
         Require.nonNull("Node health check service", nodeHealthCheckService);
     this.purgeNodesInterval = Require.nonNull("Purge nodes interval", purgeNodesInterval);
     this.purgeDeadNodesService = Require.nonNull("Purge dead nodes service", purgeDeadNodesService);
-    this.newSessionThreadPoolSize = newSessionThreadPoolSize;
 
     this.model = new LocalGridModel(bus);
     this.nodes = new ConcurrentHashMap<>();
@@ -139,9 +141,10 @@ public class LocalNodeRegistry implements NodeRegistry {
         healthcheckInterval.toMillis(),
         TimeUnit.MILLISECONDS);
 
+    // Health checks are I/O-bound; a cached pool spawns one thread per active check and
+    // reuses idle threads, giving each cycle a single concurrent pass over all nodes.
     this.nodeHealthCheckExecutor =
-        Executors.newFixedThreadPool(
-            this.newSessionThreadPoolSize,
+        Executors.newCachedThreadPool(
             r -> {
               Thread t = new Thread(r);
               t.setName("node-health-check-" + t.getId());
@@ -306,27 +309,54 @@ public class LocalNodeRegistry implements NodeRegistry {
 
   @Override
   public void runHealthChecks() {
-    ImmutableMap<NodeId, Runnable> nodeHealthChecks;
+    if (!healthChecksInProgress.compareAndSet(false, true)) {
+      LOG.log(getDebugLogLevel(), "Skipping health checks because previous cycle is still running");
+      return;
+    }
+
+    Map<NodeId, Runnable> nodeHealthChecks;
     Lock readLock = this.lock.readLock();
     readLock.lock();
     try {
-      nodeHealthChecks = ImmutableMap.copyOf(allChecks);
+      nodeHealthChecks = Map.copyOf(allChecks);
     } finally {
       readLock.unlock();
     }
 
-    if (nodeHealthChecks.isEmpty()) {
-      return;
+    try {
+      if (nodeHealthChecks.isEmpty()) {
+        return;
+      }
+
+      List<Future<?>> futures = new ArrayList<>(nodeHealthChecks.size());
+      nodeHealthChecks.forEach(
+          (nodeId, check) -> {
+            try {
+              futures.add(nodeHealthCheckExecutor.submit(() -> runHealthCheck(nodeId, check)));
+            } catch (RejectedExecutionException e) {
+              LOG.log(
+                  getDebugLogLevel(),
+                  String.format(
+                      "Unable to schedule health check for node %s, running in caller thread",
+                      nodeId),
+                  e);
+              runHealthCheck(nodeId, check);
+            }
+          });
+
+      for (Future<?> future : futures) {
+        try {
+          future.get();
+        } catch (InterruptedException e) {
+          Thread.currentThread().interrupt();
+          break;
+        } catch (Exception e) {
+          LOG.log(getDebugLogLevel(), "Error waiting for health check execution", e);
+        }
+      }
+    } finally {
+      healthChecksInProgress.set(false);
     }
-
-    List<Runnable> checks = new ArrayList<>(nodeHealthChecks.values());
-    int total = checks.size();
-
-    // Large deployments: process in parallel batches with controlled concurrency
-    int batchSize = Math.max(10, total / 10);
-
-    List<List<Runnable>> batches = partition(checks, batchSize);
-    processBatchesInParallel(batches);
   }
 
   @Override
@@ -358,9 +388,7 @@ public class LocalNodeRegistry implements NodeRegistry {
   @Override
   public Set<NodeStatus> getAvailableNodes() {
     // Filter nodes are UP and have capacity (available slots)
-    return getUpNodes().stream()
-        .filter(NodeStatus::hasCapacity)
-        .collect(ImmutableSet.toImmutableSet());
+    return getUpNodes().stream().filter(NodeStatus::hasCapacity).collect(toUnmodifiableSet());
   }
 
   @Override
@@ -370,7 +398,7 @@ public class LocalNodeRegistry implements NodeRegistry {
     try {
       return model.getSnapshot().stream()
           .filter(node -> UP.equals(node.getAvailability()))
-          .collect(ImmutableSet.toImmutableSet());
+          .collect(toUnmodifiableSet());
     } finally {
       readLock.unlock();
     }
@@ -412,7 +440,7 @@ public class LocalNodeRegistry implements NodeRegistry {
   @Override
   public boolean isReady() {
     try {
-      return ImmutableSet.of(bus).parallelStream()
+      return Set.of(bus).parallelStream()
           .map(HasReadyState::isReady)
           .reduce(true, Boolean::logicalAnd);
     } catch (RuntimeException e) {
@@ -420,40 +448,12 @@ public class LocalNodeRegistry implements NodeRegistry {
     }
   }
 
-  private void processBatchesInParallel(List<List<Runnable>> batches) {
-    if (batches.isEmpty()) {
-      return;
+  private void runHealthCheck(NodeId nodeId, Runnable check) {
+    try {
+      check.run();
+    } catch (Throwable t) {
+      LOG.log(getDebugLogLevel(), "Health check execution failed for node " + nodeId, t);
     }
-
-    // Process all batches with controlled parallelism
-    batches.forEach(
-        batch ->
-            nodeHealthCheckExecutor.submit(
-                () ->
-                    batch.parallelStream()
-                        .forEach(
-                            r -> {
-                              try {
-                                r.run();
-                              } catch (Throwable t) {
-                                LOG.log(
-                                    getDebugLogLevel(),
-                                    "Health check execution failed in batch",
-                                    t);
-                              }
-                            })));
-  }
-
-  private static List<List<Runnable>> partition(List<Runnable> list, int size) {
-    List<List<Runnable>> batches = new ArrayList<>();
-    if (list.isEmpty() || size <= 0) {
-      return batches;
-    }
-    for (int i = 0; i < list.size(); i += size) {
-      int end = Math.min(i + size, list.size());
-      batches.add(new ArrayList<>(list.subList(i, end)));
-    }
-    return batches;
   }
 
   private Runnable asRunnableHealthCheck(Node node) {
@@ -520,7 +520,7 @@ public class LocalNodeRegistry implements NodeRegistry {
   }
 
   @Override
-  public void setSession(SlotId slotId, Session session) {
+  public void setSession(SlotId slotId, @Nullable Session session) {
     Lock writeLock = lock.writeLock();
     writeLock.lock();
     try {
@@ -566,6 +566,7 @@ public class LocalNodeRegistry implements NodeRegistry {
    * @param uri The URI of the node to find
    * @return The node if found, null otherwise
    */
+  @Nullable
   public Node getNode(URI uri) {
     Lock readLock = this.lock.readLock();
     readLock.lock();
@@ -584,6 +585,7 @@ public class LocalNodeRegistry implements NodeRegistry {
   @Override
   public void close() {
     LOG.info("Shutting down LocalNodeRegistry");
+    shutdownGracefully("Local Distributor - Node Health Check Worker", nodeHealthCheckExecutor);
     Lock writeLock = lock.writeLock();
     writeLock.lock();
     try {
