@@ -22,11 +22,11 @@ import static java.net.HttpURLConnection.HTTP_NOT_FOUND;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.openqa.selenium.remote.http.Contents.bytes;
 
-import com.google.common.collect.ImmutableMap;
 import java.io.UncheckedIOException;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
+import org.jspecify.annotations.Nullable;
 import org.openqa.selenium.internal.Require;
 import org.openqa.selenium.json.Json;
 import org.openqa.selenium.remote.http.HttpHandler;
@@ -44,11 +44,11 @@ public class NoHandler implements HttpHandler {
   @Override
   public HttpResponse execute(HttpRequest req) throws UncheckedIOException {
     // We're not using ImmutableMap for the outer map because it disallows null values.
-    Map<String, Object> responseMap = new HashMap<>();
+    Map<String, @Nullable Object> responseMap = new HashMap<>();
     responseMap.put("sessionId", null);
     responseMap.put(
         "value",
-        ImmutableMap.of(
+        Map.of(
             "error", "unknown command",
             "message",
                 String.format(
