@@ -22,7 +22,7 @@ import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.openqa.selenium.testing.Safely.safelyCall;
 
-import com.google.common.collect.ImmutableMap;
+import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.atomic.AtomicReference;
@@ -111,7 +111,7 @@ public abstract class WebSocketTestBase {
       assertThat(latch.await(10, SECONDS)).isTrue();
     }
 
-    assertThat(message.get()).isEqualTo("Hello, World!");
+    assertThat(message).hasValue("Hello, World!");
   }
 
   @Test
@@ -134,12 +134,11 @@ public abstract class WebSocketTestBase {
       assertThat(latch.await(10, SECONDS)).isTrue();
     }
 
-    assertThat(message.get()).isEqualTo("brie".getBytes(UTF_8));
+    assertThat(message).hasValue("brie".getBytes(UTF_8));
   }
 
   private static BaseServerOptions defaultOptions() {
     return new BaseServerOptions(
-        new MapConfig(
-            ImmutableMap.of("server", ImmutableMap.of("port", PortProber.findFreePort()))));
+        new MapConfig(Map.of("server", Map.of("port", PortProber.findFreePort()))));
   }
 }
